--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/script.js"></script>
     <title>PORTFOLIO||WEBSITE</title>
 </head>
 <body>
@@ -53,7 +55,7 @@
             <a href="https://www.twitter.com" class="fa fa-twitter"></a>
           </div>
         <div class="logo-container">
-            <img src="assets/logo1.png">
+            <img class="web" src="assets/logo1.png">
         </div>
         
         <div class="main-container" id="about">
